IGNITE-14389 Added in-memory meta storage implementation.